<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.FragmentPlaceDetails">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/margin_buttom">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="City: "
            android:textSize="@dimen/text_size"
            android:layout_marginRight="@dimen/margin_right"/>
        <TextView
            android:id="@+id/city"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/choose_a_place_from_the_places_tab"
            android:textSize="@dimen/text_size"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/margin_buttom">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/name"
            android:textSize="@dimen/text_size"
            android:layout_marginRight="@dimen/margin_right"/>
        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/choose_a_place_from_the_places_tab"
            android:textSize="@dimen/text_size"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/margin_buttom">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/address"
            android:textSize="@dimen/text_size"
            android:layout_marginRight="@dimen/margin_right"/>
        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/choose_a_place_from_the_places_tab"
            android:textSize="@dimen/text_size"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/margin_buttom">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/distance"
            android:textSize="@dimen/text_size"
            android:layout_marginRight="@dimen/margin_right"/>
        <TextView
            android:id="@+id/distance"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/choose_a_place_from_the_places_tab"
            android:textSize="@dimen/text_size"/>
    </LinearLayout>

</LinearLayout>